@@ -11,7 +11,7 @@
 CMyDialog::CMyDialog(UINT nResID, CWnd* pParent)
 	: CDialog(nResID, pParent)
 {
-	m_hInstRichEdit = ::LoadLibrary(_T("RICHED32.DLL"));
+	m_hInstRichEdit = SafeLoadSystemLibrary(_T("RICHED32.DLL"));
     if (!m_hInstRichEdit)
  		::MessageBox(NULL,_T("CMyDialog::CRichView  Failed to load RICHED32.DLL"), _T(""), MB_ICONWARNING);
 }
@@ -19,7 +19,7 @@ CMyDialog::CMyDialog(UINT nResID, CWnd* pParent)
 CMyDialog::CMyDialog(LPCTSTR lpszResName, CWnd* pParent)
 	: CDialog(lpszResName, pParent)
 {
-	m_hInstRichEdit = ::LoadLibrary(_T("RICHED32.DLL"));
+	m_hInstRichEdit = SafeLoadSystemLibrary(_T("RICHED32.DLL"));
 	if (!m_hInstRichEdit)
 		::MessageBox(NULL, _T("CMyDialog::CMyDialog  Failed to load RICHED32.DLL"), _T("Error"), MB_ICONWARNING);
 }
